# zephyr-nfc-hce

./: .clang-format  CMakeLists.txt  Kconfig  README.md  prj.conf  sections-rom.ld  west.yml
.devcontainer/: devcontainer.json  post-create.sh
boards/: b_u585i_iot02a.conf  b_u585i_iot02a.overlay  native_sim.conf  native_sim.overlay
keys/: README.md  private_key.der  private_key.pem  public_key.pem
legacy/: pn532.c
src/: auth.c  index.html  main.c  pn532.c  pn532.h  socket_server.c  test.c  web.c
web/: index.html  script.js
